[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Ethan Rooke <ethan@roo.ke>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<=3.11"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"
jupyter = "^1.0.0"
networkx = "^2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
